--- a/bl1nk.conf
+++ b/bl1nk.conf
@@ -1,7 +1,7 @@
 ## name: Bl1nk
 ## author: dhay3
-## license: CC BY 4.0
-## upstream: https://github.com/dhay3/stow/blob/main/kitty/themes/bl1nk.conf
+## license: CC0 1.0
+## upstream: https://github.com/dhay3/kitty-bl1nk/blob/main/bl1nk.conf
 
 #: If you have no idea what is that do then disable it.
 term                                    xterm-256color
