--- a/bl1nk.conf
+++ b/bl1nk.conf
@@ -1,4 +1,4 @@
-## name: Bl1nk
+## name: bl1nk
 ## author: dhay3
 ## license: CC0 1.0
 ## upstream: https://github.com/dhay3/kitty-bl1nk/blob/main/bl1nk.conf
